final touches just missing padding fix on last page

--- a/css/styles.css
+++ b/css/styles.css
@@ -164,7 +164,7 @@ h2 {
 }
 
 h3 {
-  font-size: calc(1.3rem + 0.6vw);
+  font-size: calc(1.1rem + 0.6vw);
 }
 @media (min-width: 1200px) {
   h3 {
@@ -317,7 +317,7 @@ textarea {
 }
 @media (min-width: 1400px) {
   .container {
-    max-width: 1500px;
+    max-width: 1100px;
   }
 }
 .row {
@@ -751,10 +751,11 @@ textarea.form-control {
 
 .mb-0 {
   margin-bottom: 0 !important;
+
 }
 
 .mb-3 {
-  margin-bottom: 1rem !important;
+  margin-bottom: 0rem !important;
 }
 
 .mb-4 {
@@ -770,7 +771,12 @@ textarea.form-control {
 }
 
 .p-5 {
-  padding: 3rem !important;
+  padding: 1.5rem !important;
+}
+
+#bullets {
+  text-align: left !important;
+  font-size: 0.9rem;
 }
 
 .py-5 {
@@ -900,7 +906,7 @@ p {
 }
 .section-heading .section-heading-lower {
   display: block;
-  font-size: 4vw;
+  font-size: 2rem;
   font-weight: 400;
 }
 
@@ -1008,6 +1014,27 @@ p {
 @media (min-width: 1200px) {
   .intro .intro-text {
     width: 45%;
+  }
+}
+
+@media (min-width: 0px) {
+  .product-item .product-item-title {
+    position: relative;
+    z-index: 1;
+    margin-bottom: -0.5rem;
+  }
+  .product-item .product-item-img {
+    position: relative;
+    z-index: 0;
+    float: center;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .product-item .product-item-description {
+    position: relative;
+    z-index: 1;
+    margin-top: -0.5rem;
+    max-width: 100vw;
   }
 }
 
